Fix base64 functions for java 9.